fix dark mode
put script in header

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -121,11 +121,11 @@ main {
 	display: none;
 }
 
-body[theme="dark"] .logo {
+html[theme="dark"] .logo {
 	display: none;
 }
 
-body[theme="dark"] .logo-dark {
+html[theme="dark"] .logo-dark {
 	display: inline;
 }
 
